# satscan

./: .gitignore  LICENSE.txt  Makefile  README.md  SaTScan_Help.chm  architectural.md  readme.txt  satscanproject.sln  signbinary.bat
Doc/: Architecture.rtf  SaTScan Source Revision History.doc  SaTScan Version History.doc  SaTScan Version History.docx  SaTScan.Software.Steps.to.Release.doc  SaTScanHistory.txt  SaTScan_Users_Guide.doc  SaTScan_Users_Guide.docx  chmProcessor.WHC  execution-flow.drawio
batch_application/: Main.cpp  Makefile  ParameterProgramOptions.cpp  ParameterProgramOptions.h  SaTScan.sln  SaTScan.vcproj  SaTScan.vcxproj  SaTScan.vcxproj.filters  SaTScanBatch.bpf  SaTScanBatch.bpr  SaTScanBatch.res
calculation/: IniParameterFileAccess.cpp  IniParameterFileAccess.h  IniParameterSpecification.cpp  IniParameterSpecification.h  IniSession.cpp  IniSession.h  MultipleAnalyses.cpp  MultipleAnalyses.h  Param.cpp  Param.h  ParameterFileAccess.cpp  ParameterFileAccess.h  ParameterTypes.h  Parameters.cpp  Parameters.h  ParametersPrint.cpp  ParametersPrint.h  ParametersValidate.cpp  ParametersValidate.h  RunTimeComponents.cpp  RunTimeComponents.h  SPATSCAN.H  SaTScan.h  SaTScanBasis.cpp  SaTScanBasis.h  ScanLineParameterFileAccess.cpp  ScanLineParameterFileAccess.h  Toolkit.cpp  Toolkit.h  basic.h  main.cpp
calculation/Output/: AbstractDataFileWriter.cpp  AbstractDataFileWriter.h  AsciiPrintFormat.cpp  AsciiPrintFormat.h  ChartGenerator.cpp  ChartGenerator.h  ClusterInformationWriter.cpp  ClusterInformationWriter.h  ClusterKML.cpp  ClusterKML.h  ClusterLocationsWriter.cpp  ClusterLocationsWriter.h  ClusterMap.cpp  ClusterMap.h  ClusterScatterChart.cpp  ClusterScatterChart.h  CoefficientsWriter.cpp  CoefficientsWriter.h  GisUtils.cpp  GisUtils.h  LocationRiskEstimateWriter.cpp  LocationRiskEstimateWriter.h  LoglikelihoodRatioWriter.cpp  LoglikelihoodRatioWriter.h  ShapeFileWriter.cpp  ShapeFileWriter.h  stsASCIIFileWriter.cpp  stsASCIIFileWriter.h  stsAreaSpecificDBF.cpp  stsAreaSpecificDBF.h  stsAreaSpecificData.cpp  stsAreaSpecificData.h  stsClusterData.cpp  stsClusterData.h  stsClusterLevelDBF.cpp  stsClusterLevelDBF.h  stsDBaseFileWriter.cpp  stsDBaseFileWriter.h  stsLogLikelihood.cpp  stsLogLikelihood.h  (+10 more)
calculation/analysis/: AbstractAnalysis.cpp  AbstractAnalysis.h  AbstractBruteForceAnalysis.cpp  AbstractBruteForceAnalysis.h  AbstractCentricAnalysis.cpp  AbstractCentricAnalysis.h  Analysis.cpp  Analysis.h  IntermediateClustersContainer.cpp  IntermediateClustersContainer.h  IntermediateClustersContainer.hpp  MeasureList.cpp  MeasureList.h  PSManalysis.cpp  PSManalysis.h  PSanalysis.cpp  PSanalysis.h  PTanalysis.cpp  PTanalysis.h  PurelySpatialAnalysis.cpp  PurelySpatialAnalysis.h  PurelySpatialBruteForceAnalysis.cpp  PurelySpatialBruteForceAnalysis.h  PurelySpatialCentricAnalysis.cpp  PurelySpatialCentricAnalysis.h  PurelyTemporalAnalysis.cpp  (+35 more)
compare/: Main.cpp  Main.dfm  Main.h  Options.cpp  Options.dfm  Options.h  QueueItemDefinition.cpp  QueueItemDefinition.dfm  QueueItemDefinition.h  QueueWindow.cpp  QueueWindow.dfm  QueueWindow.h  SaTScanCompare.bpr  SaTScanCompare.cpp  SaTScanCompare.res  mexcel.cpp
installers/: build.installers.sh  buildWindowsInstaller.bat  jpackageInstallerLinux.sh  jpackageInstallerMac-build-app.sh  jpackageInstallerMac-build-dmg.sh  jpackageInstallerMac.sh  jpackageInstallerWindows.bat
newmat/: ReadMe.txt  newmat.vcproj  newmat.vcxproj  newmat.vcxproj.filters  test_newmat.cpp  test_newmat.h
shared_library/: JNIException.cpp  PrintCallback.cpp  PrintCallback.h  SharedLibrary.cpp  libsatscan.vcxproj  libsatscan.vcxproj.filters  org_satscan_app_AppConstants.h  org_satscan_app_CalculationThread.h  org_satscan_app_Parameters.h  org_satscan_gui_ApplicationPreferences.h  org_satscan_gui_BatchAnalysisFrame.h  org_satscan_gui_OberservableRegionsFrame.h  org_satscan_gui_ParameterSettingsFrame.h  org_satscan_importer_ShapefileDataSource.h  org_satscan_utils_FileAccess.h  stsJNIPrintWindow.cpp  stsJNIPrintWindow.h  stsParametersUtility.cpp  stsParametersUtility.h
test/: fixture_prm_source.h  fixture_sampledata.h  integrationtest_batched.cpp  integrationtest_closedloop.cpp  integrationtest_linelist.cpp  integrationtest_oliveira.cpp  integrationtest_oliviera.cpp  integrationtest_points.cpp  integrationtest_squish66408.cpp  integrationtest_squish66425.cpp  integrationtest_squish66508.cpp  run-tests.bat  squish66406.cpp  squish66420.cpp  squish66440.cpp  squish66455.cpp  test.vcxproj  test.vcxproj.filters  test_helper.cpp  test_helper.h  unittest_BatchedLikelihoodCalculation.cpp  unittest_DataSource.cpp  unittest_JulianDates.cpp  unittest_ParametersValidate.cpp  unittest_PoissonLikelihoodCalculation.cpp
unix_application/: Main.cpp  Makefile  makescript  satscan.run.shell
updater/: dlgULA.cpp  dlgULA.dfm  dlgULA.h  readme.txt  updater.bpr  updater.cpp  uprException.cpp  uprException.h  uprMain.cpp  uprMain.dfm  uprMain.h
updater/ziplib/zziplib_0.10.27/: ChangeLog  Makefile.am  Makefile.in  SDL_rwops_zzcat.c  TODO  aclocal.m4  config.h.in  configure  configure.ac  mkinstalldirs  zzcat.c  zzdir.c  zzip-conf.h  zzip-config.h  zzip-dir.c  zzip-doc.pl  zzip-err.c  zzip-file.c  zzip-file.h  zzip-file.html  zzip-index.html  zzip-info.c  zzip-msvc.h  zzip-sdl-rwops.html  zzip-stat.c  zzip-stdint.h  zzip-zip.c  zzip-zip.html  zzip.h  zziplib.h  zziplib.html  zziplib.spec  zziptest.c
windows_application/: BasisVCL.cpp  BasisVCL.h  CalcThread.cpp  CalcThread.h  PageAnalysis.cpp  PageAnalysis.h  PageInputFiles.cpp  PageInputFiles.h  PageOutput.cpp  PageOutput.h  PageScanningWindow-Mod.cpp  PageScanningWindow.cpp  PageScanningWindow.h  PageTimeParameters.cpp  PageTimeParameters.h  ParamWin.cpp  ParamWin.h  PrintWindow.cpp  PrintWindow.h  STDAFX.H  STSPropSheet.cpp  STSPropSheet.h  SaTScanBatch.bpf  SaTScanBatch.bpr  SaTScanBatch.res  SaTScanBatchMain.cpp  SatScan.h  StsWinPrj.bpr  StsWinPrj.cpp  StsWinPrj.res  Stswin.cpp  Stswin.dfm  Stswin.h  TfrmAbout.cpp  TfrmAbout.dfm  TfrmAbout.h  TfrmAnalysis.cpp  TfrmAnalysis.dfm  TfrmAnalysis.h  Utils.cpp  (+70 more)
(+708 files in other folders)
